<resources>
    <string name="app_name">TATTZY</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="home_fragment_label">Home Fragment</string>
    <string name="explore_fragment_label">Explore Fragment</string>
    <string name="login">Logowanie</string>
    <string name="home">Home</string>

    <string name="skip">pomiń</string>
    <string name="register">Rejestracja</string>
    <string name="search">Wyszukaj</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_fragment_label">Login Fragment</string>
    <string name="register_fragment_label">Register Fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="logout">Wyloguj</string>
    <string name="chat">chat</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="clienttype_fragment_label">Client Type</string>
    <string name="client">Klient</string>
    <string name="artist">Artysta</string>
    <string name="client_type_tip">Wybierz typ konta</string>
    <string name="select_date">Select date</string>
    <string name="select_time">Select time</string>
</resources>