<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/HomeFragment">

    <fragment
        android:id="@+id/HomeFragment"
        android:name="zpo.projekt.tattzy.HomeFragment"
        android:label="@string/home_fragment_label"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_HomeFragment_to_ExploreFragment"
            app:destination="@id/ExploreFragment" />
        <action
            android:id="@+id/action_HomeFragment_to_LoginFragment"
            app:destination="@id/LoginFragment" />
        <action
            android:id="@+id/action_HomeFragment_to_RegisterFragment"
            app:destination="@id/RegisterFragment" />



    </fragment>
    <fragment
        android:id="@+id/ExploreFragment"
        android:name="zpo.projekt.tattzy.ExploreFragment"
        android:label="@string/explore_fragment_label"
        tools:layout="@layout/fragment_explore">

        <action
            android:id="@+id/action_ExploreFragment_to_HomeFragment"
            app:destination="@id/HomeFragment" />
    </fragment>
    <fragment
        android:id="@+id/LoginFragment"
        android:name="zpo.projekt.tattzy.LoginFragment"
        android:label="@string/login_fragment_label"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_LoginFragment_to_ExploreFragment"
            app:destination="@id/ExploreFragment" />

    </fragment>
    <fragment
        android:id="@+id/RegisterFragment"
        android:name="zpo.projekt.tattzy.RegisterFragment"
        android:label="@string/register_fragment_label"
        tools:layout="@layout/fragment_register">
        <action
            android:id="@+id/action_RegisterFragment_to_ExploreFragment"
            app:destination="@id/ExploreFragment" />
    </fragment>
</navigation>